--- a/style.css
+++ b/style.css
@@ -76,3 +76,11 @@ color: #ffff76;
     background-size: 30px;
     cursor: pointer;
 }
+
+#result{
+    font-size: 20px;
+}
+
+#result span{
+    color: #ffff76;
+}
